# displayxr-runtime

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HANDOFF_184.md  NEXT_AGENT_PROMPT_184.md  NOTICE  README.md  build.gradle  settings.gradle  vcpkg-configuration.json  vcpkg.json  versions.json
test_apps/: CMakeLists.txt  COLOR_REGRESSION_MATRIX.md  EXT_TEST_APPS.md  HANDLE_TEST_APPS.md  README.md  apps.cmake
test_apps/3dgs_common/: CMakeLists.txt
test_apps/common/: CMakeLists.txt  atlas_capture.cpp  atlas_capture.h  atlas_capture_d3d11.cpp  atlas_capture_d3d12.cpp  atlas_capture_gl.cpp  atlas_capture_macos.mm  atlas_capture_metal.mm  atlas_capture_vk.cpp  camera3d_view.c  camera3d_view.h  d3d11_renderer.cpp  d3d11_renderer.h  display3d_view.c  display3d_view.h  displayxr_manifest.cmake  hud_overlay_macos.h  hud_overlay_macos.m  hud_renderer.cpp  hud_renderer.h  hud_renderer_macos.h  hud_renderer_macos.mm  input_handler.cpp  input_handler.h  leia_math.h  mip_chain.h  projection_depth.h  stereo_params.h  text_overlay.cpp  text_overlay.h  xr_session_common.cpp  xr_session_common.h  xr_window_space_hud.cpp  xr_window_space_hud.h
test_apps/cube_d3d11/: CMakeLists.txt
test_apps/cube_ext_d3d11/: CMakeLists.txt  main.cpp
test_apps/cube_ext_d3d11_win/: main.cpp  xr_session.cpp
test_apps/cube_ext_d3d12/: CMakeLists.txt  main.cpp
test_apps/cube_ext_d3d12_win/: main.cpp  xr_session.cpp
test_apps/cube_ext_gl/: CMakeLists.txt  main.cpp
test_apps/cube_ext_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_ext_gl_win/: main.cpp  xr_session.cpp
test_apps/cube_ext_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_ext_vk/: CMakeLists.txt  main.cpp
test_apps/cube_ext_vk_macos/: CMakeLists.txt  main.mm
test_apps/cube_ext_vk_win/: main.cpp  xr_session.cpp
test_apps/cube_handle_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_handle_d3d12_win/: CMakeLists.txt  d3d12_renderer.cpp  d3d12_renderer.h  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_handle_gl_linux/: CMakeLists.txt  main.cpp
test_apps/cube_handle_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_handle_gl_win/: CMakeLists.txt  gl_functions.cpp  gl_functions.h  gl_renderer.cpp  gl_renderer.h  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_handle_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_handle_vk_android/: build.gradle
test_apps/cube_handle_vk_linux/: CMakeLists.txt  main.cpp
test_apps/cube_handle_vk_macos/: CMakeLists.txt  main.mm
test_apps/cube_handle_vk_win/: CMakeLists.txt  main.cpp  resource.rc  vk_renderer.cpp  vk_renderer.h  xr_session.cpp  xr_session.h
test_apps/cube_hosted_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_hosted_legacy_d3d11_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_hosted_legacy_d3d12_win/: CMakeLists.txt  main.cpp  xr_session.cpp  xr_session.h
test_apps/cube_hosted_legacy_gl_linux/: CMakeLists.txt  main.cpp  stb_image_impl.cpp
test_apps/cube_hosted_legacy_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_hosted_legacy_gl_win/: CMakeLists.txt  gl_functions.cpp  gl_functions.h  gl_renderer.cpp  gl_renderer.h  main.cpp  xr_session.cpp  xr_session.h
test_apps/cube_hosted_legacy_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_hosted_legacy_vk_linux/: CMakeLists.txt  main.cpp  stb_image_impl.cpp
test_apps/cube_hosted_legacy_vk_macos/: CMakeLists.txt  main.cpp
test_apps/cube_hosted_legacy_vk_win/: CMakeLists.txt  main.cpp  xr_session.cpp  xr_session.h
test_apps/cube_hosted_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_ipc_d3d11_win/: CMakeLists.txt  main.cpp
test_apps/cube_ipc_legacy_d3d11_win/: CMakeLists.txt  main.cpp
test_apps/cube_rt_d3d11_win/: main.cpp
test_apps/cube_rt_d3d12_win/: CMakeLists.txt  main.cpp
test_apps/cube_rt_gl_macos/: main.mm
test_apps/cube_rt_gl_win/: CMakeLists.txt  main.cpp
test_apps/cube_rt_metal_macos/: main.mm
test_apps/cube_rt_vk_macos/: main.cpp
test_apps/cube_shared_d3d11/: main.cpp
test_apps/cube_shared_d3d11_win/: main.cpp  xr_session.cpp
test_apps/cube_shared_d3d12/: main.cpp
test_apps/cube_shared_d3d12_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_shared_gl/: main.cpp
test_apps/cube_shared_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_shared_gl_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_shared_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_shared_vk_macos/: CMakeLists.txt  main.mm
test_apps/cube_shared_vk_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_texture_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  xr_session.cpp  xr_session.h
test_apps/cube_texture_d3d12_win/: CMakeLists.txt  main.cpp  xr_session.cpp  xr_session.h
test_apps/cube_texture_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_texture_vk_android/: build.gradle
test_apps/cube_zones_d3d11_win/: CMakeLists.txt  main.cpp  resource.rc  sr_cube_openxr_ext.manifest  xr_session.cpp  xr_session.h
test_apps/cube_zones_d3d12_win/: CMakeLists.txt  d3d12_renderer.cpp  d3d12_renderer.h  main.cpp  resource.rc  sr_cube_openxr_zones_d3d12.manifest  xr_session.cpp
test_apps/cube_zones_gl_win/: CMakeLists.txt  gl_functions.cpp  gl_functions.h  gl_renderer.cpp  gl_renderer.h  main.cpp  resource.rc  xr_session.cpp
test_apps/cube_zones_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_zones_texture_d3d11_win/: CMakeLists.txt  main.cpp  xr_session.cpp
test_apps/cube_zones_texture_d3d12_win/: CMakeLists.txt  d3d12_renderer.cpp  d3d12_renderer.h  sr_cube_openxr_zones_texture_d3d12.manifest  xr_session.h
test_apps/cube_zones_texture_gl_macos/: CMakeLists.txt  main.mm
test_apps/cube_zones_texture_gl_win/: CMakeLists.txt  gl_functions.cpp  gl_functions.h  gl_renderer.cpp  resource.rc
test_apps/cube_zones_texture_metal_macos/: CMakeLists.txt  main.mm
test_apps/cube_zones_texture_vk_win/: CMakeLists.txt  main.cpp  (+3 more)
(+1221 files in other folders)
